[project]
name = "SimPy_Starlinetor"
version = "0.1.0"
authors = [
  { name="Starlinetor", email="" },
]
description = "Simulation utilities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/starlinetor/SimPy_Starlinetor"